# portfolio-exchanges

./: .gitignore  CONTRIBUTING.md  DataCollectorEC2Setup.yaml  Dockerfile  Makefile  README.md  init.sh  main_data_collect.py  pyproject.toml  set_aws_profile.sh
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
requests/: bitvavo.rest  btcturk.rest
src/: data_collector.py
src/config/development/: btcturk.yaml  data.yaml  data_collector.yaml
src/config/production/: bitvavo.yaml  data.yaml  writer.yaml
src/exchanges/: __init__.py  bitvavo.py  btcturk.py  commons.py  exceptions.py  exchange_factory.py  exchange_interface.py
src/utils/: config_loader.py  http_helpers.py  utils.py
src/writer/: aws_ts.py  factory.py  local_parquet.py  s3_parquet.py  writer_interface.py
src/ws_handlers/: base_handler.py  bitvavo.py
tests/: conftest.py  test_bitvavo.py  test_btcturk.py  test_data_collector.py
tests/resources/bitvavo/: assets.json  exchange_info.json  orderbook_btc_eur.json
tests/resources/btcturk/: exchange_info.json  orderbook_btc_try.json
